--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     </p>
 
     <ul>
-      <li><a href="scans/chair001.html">Scene 01</a></li>
-      <li><a href="scene02.html">Scene 02</a></li>
+      <li><a href="scans/LUMA_gs_temple_batch_3.html">Uxin Ju Tempble</a></li>
+      <li><a href="scans/chair001.html">Splatfacto chair</a></li>
       <li><a href="scene03.html">Scene 03</a></li>
     </ul>
   </body>
