--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <meta charset="utf8" />
@@ -58,6 +58,7 @@
       <li><a href="scans/LUMA_gs_temple_batch_3.html">Uxin Ju Tempble</a></li>
       <li><a href="scans/chair001.html">Splatfacto chair</a></li>
       <li><a href="scans/mtAuburn.html">Mt Auburn</a></li>
+      <li><a href="scans/lounge_7.html">ArchLounge</a></li>
     </ul>
   </body>
 </html>
