Lounge Scan Viewer app update

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <li><a href="scans/LUMA_gs_temple_batch_3.html">Uxin Ju Tempble</a></li>
       <li><a href="scans/chair001.html">Splatfacto chair</a></li>
       <li><a href="scans/mtAuburn.html">Mt Auburn</a></li>
-      <li><a href="scans/lounge_7.html">ArchLounge</a></li>
+      <li><a href="scans/ArchLounge.html">ArchLounge</a></li>
     </ul>
   </body>
 </html>
